--- a/test_oa_project/www/Templets/System/Personnel/systemUserList.html
+++ b/test_oa_project/www/Templets/System/Personnel/systemUserList.html
@@ -61,9 +61,9 @@
 										<dd class="fxDone" data-value="email">公司邮箱</dd>
 										<dd class="fxDone" data-value="system_user_id">用户ID</dd>
 									</dl>
-									<input type="hidden" name="key_name" value="<?php echo !empty($data['requery']['key_name'])?$data['requery']['key_name']:''; ?>">
+									<input type="hidden" name="key_name" value="">
 								</div>
-								<input type="text" class="feInp" name="key_value" value="<?php echo !empty($data['requery']['key_value'])?$data['requery']['key_value']:''; ?>">
+								<input type="text" class="feInp" name="key_value" value="">
 								<input type="submit" class="feSearchSubmit" value="搜索">
 							</div>
 						</form>
