--- a/www/Templets/System/Personnel/editSystemUser.html
+++ b/www/Templets/System/Personnel/editSystemUser.html
@@ -6,9 +6,6 @@
     <link rel="stylesheet" href="__PUBLIC__/css/common.css">
     <link rel="stylesheet" href="__PUBLIC__/js/glDatePicker/glDatePicker.default.css">
     <link rel="stylesheet" href="__PUBLIC__/css/newEmployees.css">
-    <script>
-        var jump_code = "{$jump_code}";
-    </script>
 </head>
 <body>
 <div class="wrapBox" id="sUserAddWrap">
@@ -19,7 +16,7 @@
                 <span><em>&gt;</em>修改员工信息</span>
             </div>
             <div class="topRight r">
-                <a href="{$data['url_systemUser']}" class="return">返回</a>
+                <a href="javascript:history.go(-1)" class="return">返回</a>
             </div>
         </div>
         <div class="nsMiddle">
