--- a/www/Templets/System/Personnel/leaveSystemUserList.html
+++ b/www/Templets/System/Personnel/leaveSystemUserList.html
@@ -58,6 +58,7 @@
                         <input type="text" class="feInp" name="key_value" value="">
                         <input type="submit" class="feSearchSubmit" value="搜索">
                     </div>
+                    <input type="hidden" name="page" value="1">
                 </form>
             </div>
             <div class="feMiddleTop" id="pjax_body">
@@ -72,7 +73,10 @@
                     <input type="button" value="删除所选" class="delInp">
                 </div>
                 <div class="collegaPage paging" id="paging">
-
+                    <script>
+                        //获取页面参数
+                        $(function(){getAjax();});
+                    </script>
                 </div>
             </dl>
         </div>
@@ -208,7 +212,7 @@
         <div class="select_title l">选择大区及城市</div>
         <div class="arrow r"></div>
         </dt>
-        <dd class="fxDone" data-value="0" data-name="zone_id" style="padding-left: 10px" data-value="{{ d.zone_id }}">{{ d.name }}</dd>
+        <dd class="fxDone" data-name="zone_id" style="padding-left: 10px" data-value="{{ d.zone_id }}">{{ d.name }}</dd>
         {{# layui.each(d.children, function(k, v){ }}
             <dd class="fxDone" data-name="zone_id" style="padding-left: 20px" data-value="{{ v.zone_id }}">{{ v.name }}</dd>
             {{# layui.each(v.children, function(k2, v2){ }}
