--- a/www/Templets/System/Statistics/marketIndex.html
+++ b/www/Templets/System/Statistics/marketIndex.html
@@ -14,13 +14,13 @@
 		</script>
 	</head>
 	<body>
-		<div class="wrapper_box">
+		<div class="wrapper-box">
 			<div class="title clearfix">
-	            <div class="title_left">
-	            	<span class="title_text">营销统计管理</span>
+	            <div class="title-left">
+	            	<span class="title-text">营销统计管理</span>
 	            </div>
-	            <div class="title_right fr clearfix">
-	            	<a href="javascript:;" class="setup_btn">设置部门统计项</a>
+	            <div class="title-right fr clearfix">
+	            	<a href="javascript:;" class="setup-btn">设置部门统计项</a>
 	            	<a href="javascript:;" class="return">设置合格标准</a>
 	            	<!--<a href="javascript:;" class="export_btn">导出数据</a>-->
 	            </div>
