--- a/test_oa_project/www/Templets/System/Statistics/marketSetList.html
+++ b/test_oa_project/www/Templets/System/Statistics/marketSetList.html
@@ -56,7 +56,7 @@
 	        		</tr>
 	        		<tr>
 	        			<td width="4.8%">邀约部</td>
-	        			<td width="9.7%">邀约主管</td>
+	        			<td width="9.7%">邀约专员、邀约主管</td>
 	        			<td width="68.3%">新增量、成交率、退单率、总转率</td>
 	        			<td width="9.2%">2016-04-21 20:51</td>
 	        			<td width="8%">
