--- a/test_oa_project/www/Templets/System/Statistics/market.html
+++ b/test_oa_project/www/Templets/System/Statistics/market.html
@@ -45,7 +45,7 @@
 		        					</ul>
 		        					<div class="position_btnbox">
 		        						<input type="button" class="confirm" value="确定">
-										<input type="hidden" name="role_id" value="{$data.request.role_id}" autocomplete="off">
+										<input type="hidden" name="role_id" value="" autocomplete="off">
 		        						<input type="button" class="cancel" value="取消">
 		        					</div>
 		        				</div>
