--- a/test_oa_project/www/Templets/System/Index/index.html
+++ b/test_oa_project/www/Templets/System/Index/index.html
@@ -19,34 +19,34 @@
 </div>
 
 	<!-- 闲 S -->
-	<div class="xianBox popup dn" id="xian">
+	<!-- <div class="xianBox popup dn" id="xian">
 		<p>我正在忙，需要处理其他工作事项（设置状态为忙线）</p>
 		<div class="btnBox clearfix">
 			<input type="button" class="xDefine l" onclick="editStatus(1)" value="确定">
 			<input type="button" class="xCancel l" value="取消">
 		</div>
-	</div>
+	</div> -->
 	<!-- 闲 E -->
 
 	<!-- 闲 S -->
-	<div class="mangBox popup dn" id="mang">
+	<!-- <div class="mangBox popup dn" id="mang">
 		<p>我有空，设置状态为空闲状态</p>
 		<div class="btnBox clearfix">
 			<input type="button" class="mDefine l" onclick="editStatus(2)" value="确定">
 			<input type="button" class="mCancel l" value="取消">
 		</div>
-	</div>
+	</div> -->
 	<!-- 闲 E -->
 
 	<!-- 忙状态超过30分钟 S -->
-	<div class="chaoBox popup dn" id="chao">
+	<!-- <div class="chaoBox popup dn" id="chao">
 		<p>你处于忙线状态<span class="code2_msg"></span></p>
 		<p>请问可以更换为闲线状态吗？</p>
 		<div class="btnBox clearfix">
 			<input type="button" class="chDefine l" onclick="editStatus(2)" value="确定">
 			<input type="button" class="chCancel l" value="取消">
 		</div>
-	</div>
+	</div> -->
 	<!-- 忙状态超过30分钟 E <x></x> -->
 	<!-- 客户到访提醒 S -->
 	<div class="visitReminds popup dn" id="automatic">
