--- a/www/Templets/System/Common/header.html
+++ b/www/Templets/System/Common/header.html
@@ -62,12 +62,13 @@
 		            <div class="msgbody">
 		                <div class="msg_con">
 		                    <div class="msgtype" style="display: block">
-		                    	<a href="{:U('System/Information/msgList')}">
+		                    	<a href="{:U('System/Information/msgList')}" class="msg-link">
 		                        	<p class="msgtype_title">查看通知</p>
 		                        </a>
 		                        <div class="msgtype_list" id="poll_msg_bady" style="display: none">
+		                        	
 		                        </div>
-								<img src="__PUBLIC__/images/loading.gif" style="margin-left: 210px; margin-top: 18px; margin-bottom: 18px;">
+								<img src="__PUBLIC__/images/loading.gif" class="msg-loading">
 		                    </div>
 		                </div>
 		            </div>
